--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,8 @@
 @import "alert";
 @import "avatars";
 @import "badges";
+@import "banner";
+@import "cards";
+@import "separator";
+@import "footer";
+@import "form";
