--- a/app/views/cocktails/new.erb
+++ b/app/views/cocktails/new.erb
@@ -1,13 +1,14 @@
-<%= simple_form_for(@cocktail) do |f| %>
-  <%= f.error_notification %>
+<div class="form">
+  <%= simple_form_for(@cocktail) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :name %>
+    </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
-
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
+</div>
 <%= link_to 'Back', cocktails_path %>
